# eigen_tensors

./: .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: ci.yml
src/: eigen_tensors.cpp
tests/: test_eigen_tensors.py
